syntax = "proto3";
package api;

option go_package = "github.com/JuanBiancuzzo/own_wiki/core"; 

// Represents the information like the frame count, etc.
message FrameInformation {
    uint32 frame_count = 1;
}

// Represents the description of the scene in a agnostic way
message SceneDescription {
    Camera main_camera = 1;
}

// Its the way to capture the perspective of the objects
message Camera {
    message PerspectiveMatrix {
        repeated float value = 1;
    }

    PerspectiveMatrix perspective = 1;
    Layout screen_layout = 2;
}

// Represents a group of objects that 
message Layout {
    repeated SceneObject objects = 1;
}

// All the objects that could be define, are define here
message SceneObject {
    message Text {
        string text = 1;
    }

    message Image {
        string url = 1;
        string title = 2;
    }

    oneof object {
        Text text = 1;
        Image url = 2;
    }
}